--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "files": [],
+  "types": ["vite-plugin-svgr/client"],
+  "include": ["src","src/vite-env.d.ts"],
   "references": [
     { "path": "./tsconfig.app.json"},
     { "path": "./tsconfig.node.json"}
