--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,9 @@
   "references": [
     { "path": "./tsconfig.app.json"},
     { "path": "./tsconfig.node.json"}
-  ]
+  ],
+  "compilerOptions": {
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true
+  }
 }
