--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-svg": "^16.3.0",
+    "react-window": "^1.8.11",
     "vite-plugin-dts": "^4.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
