--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@fontsource/onest": "^5.2.8",
     "@reduxjs/toolkit": "^2.6.1",
-    "@tailwindcss/vite": "^4.1.7",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -23,9 +22,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/vite": "^4.1.7",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-window": "^1.8.8",
+    "@types/tailwindcss": "^3.0.11",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
