--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,13 @@
 FROM maven:3.9.6-eclipse-temurin-21
+
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
+
+COPY ./product/pom.xml .
+
+RUN mvn dependency:go-offline
+
+COPY ./product/src ./src
+
 EXPOSE 8080
+
 ENTRYPOINT ["mvn", "spring-boot:run"]
