--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/onest": "^5.2.8",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.9.0",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
