--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,7 @@ jobs:
         run: mvn -B package --file pom.xml
 
       - name: Upload JAR artifact
-        working-directory: backend/product
         uses: actions/upload-artifact@v4
         with:
           name: app-jar
-          path: target/*.jar
+          path: backend/product/target/*.jar
