--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,6 +7,7 @@
       "esnext",
       "es6"
     ],
+    "types": ["jest", "@testing-library/jest-dom"],
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
