--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -4,9 +4,11 @@ on:
   workflow_dispatch
 
 jobs:
-  unit-tests:
+  run-tests:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js 20
@@ -16,16 +18,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: |
-          cd frontend
-          npm ci
+        run: npm ci
 
       - name: Run tests
-        run: |
-          cd frontend
-          npm test
-
-      - name: Build frontend
-        run: |
-          cd frontend
-          npm run build
+        run: npm test
