--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,7 +7,10 @@
       "esnext",
       "es6"
     ],
-    "types": ["jest", "@testing-library/jest-dom"],
+    "types": [
+      "jest",
+      "@testing-library/jest-dom"
+    ],
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
