--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -23,3 +23,29 @@ jobs:
 
       - name: Run tests
         run: npm test
+
+  build-frontend-app:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build app
+        run: npm run build
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: vite-build
+          path: frontend/dist
