--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -23,7 +23,7 @@ jobs:
 
   build-backend-app:
     runs-on: ubuntu-latest
-
+    needs: test-backend-app
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
