--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "test": "jest",
+    "test:e2e": "cypress open",
+    "test:e2e:run": "cypress run",
     "lint": "eslint react-multi-select",
     "preview": "vite preview"
   },
@@ -36,6 +38,7 @@
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "axios-mock-adapter": "^2.1.0",
+    "cypress": "^14.4.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
