--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,7 +9,8 @@
     ],
     "types": [
       "jest",
-      "@testing-library/jest-dom"
+      "@testing-library/jest-dom",
+      "cypress"
     ],
     "noImplicitAny": true,
     "noImplicitThis": true,
@@ -30,7 +31,8 @@
   },
   "include": [
     "src/**/*",
-    "vite.config.ts"
+    "vite.config.ts",
+    "cypress"
   ],
   "exclude": [
     "node_modules"
