Added all needed documentations

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   backend:
+    container_name: springboot-backend
     build:
       context: '../backend'
       dockerfile: Dockerfile
@@ -7,6 +8,7 @@ services:
       - "8080:8080"
 
   frontend:
+    container_name: react-frontend
     build:
       context: '../frontend'
       dockerfile: Dockerfile
