--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: springboot-backend
     build:
       context: '../backend'
-      dockerfile: Dockerfile
+      dockerfile: ../backend/Dockerfile
     ports:
       - "8080:8080"
 
