removed redundant dependency from usePlatform - reformat configs

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "test:e2e": "cypress open",
     "test:e2e:run": "cypress run",
-    "lint": "eslint react-multi-select",
+    "lint": "eslint",
     "preview": "vite preview"
   },
   "dependencies": {
