--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: ../backend/Dockerfile
     ports:
       - "8080:8080"
+    volumes:
+      - ~/.m2:/root/.m2
 
   frontend:
     container_name: react-frontend
